--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>코드 디플로이 샘플 테스트</title>
+  <title>Hello World!</title>
   <style>
     body {
       color: #ffffff;
@@ -27,8 +27,8 @@
 <body>
   <div align="center">
     <h1>축하합니다!</h1>
-    <h2>AWS CodeDeploy 이용한 배포완료!.</h2>
-    <p>다음 단계에서 해보시려면, <a href="http://aws.amazon.com/documentation/codedeploy">AWS CodeDeploy Documentation</a>를 참고하세요.</p>
+    <h2>AWS CodeDeploy Demo Page</h2>
+    <p>This is a demo page used for Github to Code-deploy demo. <a href="http://aws.amazon.com/documentation/codedeploy">AWS CodeDeploy Documentation</a></p>
   </div>
 </body>
 </html>
